# pbspy

./: .gitignore  README.md  pyproject.toml
civdj/: settings.py  settings_local.example.py  urls.py
pbspy/: forms.py  models.py  tests.py  urls.py  views.py
pbspy/locale/de/LC_MESSAGES/: django.po
pbspy/middleware/: timezone.py
pbspy/migrations/: 0017_alter_gamelog_polymorphic_ctype.py  0018_rename_player_ingame_id_game_pbspy_player_ingame_game_idx.py
pbspy/templates/pbspy/: base.html  browserconfig.xml  game_detail.html  game_list.html  game_manage.html  game_manage_player_states.html  game_victory.html
pbspy/templates/registration/: activation_email.txt
